--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^3.0.3",
     "gulp-less": "^3.5.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^2.1.0",
