--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bower": "^1.8.8",
     "express": "^4.17.1",
+    "gulp-debug": "^5.0.1",
+    "pngquant": "^4.2.0",
     "save": "^2.4.0"
   },
   "devDependencies": {
@@ -17,13 +19,18 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-imagemin": "^3.0.3",
+    "gulp-imagemin": "^7.1.0",
     "gulp-less": "^3.5.0",
+    "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^2.1.0",
     "gulp-uglify": "^2.1.2",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
     "vinyl-fs": "^3.0.3"
   },
   "scripts": {
